Add acure-aesthetics/server/.env 1749712607707

--- a/acure-aesthetics/server/.env
+++ b/acure-aesthetics/server/.env
@@ -1,3 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://127.0.0.1:27017/acure-aesthetics
+MONGODB_URI=mongodb+srv://acure:acure123@cluster0.mongodb.net/acure-aesthetics?retryWrites=true&w=majority
 NODE_ENV=development
+JWT_SECRET=acure-aesthetics-secret-key
